feat: add share post functionality